--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -41,15 +41,16 @@ a {
   }
 
   .navbar-brand {
-    font-size: 1rem;
-    padding: 1rem 1.5rem;
+    font-size: 0.6rem;
+    padding: 1rem 1.2rem;
   }
 
   .navbar-links {
-    gap: 1rem;
+    gap: 0.3rem;
   }
 
   .nav-link {
-    padding: 0.5rem;
+    font-size: 0.65rem;
+    padding: 0.4rem;
   }
 }
